kubernetes/argocd_cluster02/config/boutique-app/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: boutique
spec:
  mtls:
    mode: STRICT
