kubernetes/argocd_cluster02/config/boutique-app/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique-frontend
  namespace: boutique
spec:
  ingressClassName: nginx
  rules:
  - host: boutique.arbtech.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
